k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo
  namespace: cicd-demo
  labels:
    app: cicd-demo
spec:
  type: ClusterIP
  selector:
    app: cicd-demo
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
